--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "chai": "^6.0.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^11.7.2",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "dotenv": "^17.2.2",
+    "mochawesome": "^7.1.4",
     "nodemon": "^3.1.10"
+  },
+  "scripts": {
+    "test": "mocha \"test/**/*.test.js\" --timeout 10000 --reporter mochawesome",
+    "test-rest-external": "mocha \"test/rest/external/**/*.test.js\" --timeout 10000 --reporter mochawesome",
+    "test-rest-controller": "mocha \"test/rest/controller/**/*.js\" --timeout 10000 --reporter mochawesome",
+    "test-rest-controller-testesFelizes": "mocha \"test/rest/controller/testesFelizesController.test.js\" --timeout 10000 --reporter mochawesome",
+    "start-rest": "node server.js"
   }
 }
