Adicionando testes API Rest external

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,8 @@ jobs:
           echo "BASE_URL_REST=${{ secrets.BASE_URL_REST }}" >> .env
     #      echo "BASE_URL_GRAPHQL=${{ secrets.BASE_URL_GRAPHQL }}" >> .env
 
-    # - name: Rodar os testes externos da API Rest via HTTP
-    #    run: npm run test-rest-external
+      - name: Rodar os testes externos da API Rest via HTTP
+        run: npm run test-rest-external
 
     #  - name: Rodar os testes externos da API GraphQL via HTTP
     #    run: npm run test-graphql-external
