--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BASE_URL_REST = "http://localhost:3000"
-#BASE_URL_GRAPHQL = "http://localhost:4000/graphql"
+BASE_URL_GRAPHQL = "http://localhost:4000/graphql"
