--- a/package.json
+++ b/package.json
@@ -20,11 +20,21 @@
   },
   "scripts": {
     "test": "mocha \"test/**/*.test.js\" --timeout 10000 --reporter mochawesome",
+
     "test-rest-external": "mocha \"test/rest/external/**/*.test.js\" --timeout 10000 --reporter mochawesome",
     "test-rest-external-testesErrors": "mocha \"test/rest/external/testesErrorsExternal.test.js\" --timeout 10000 --reporter mochawesome",
+
     "test-rest-controller": "mocha \"test/rest/controller/**/*.js\" --timeout 10000 --reporter mochawesome",
     "test-rest-controller-testesFelizes": "mocha \"test/rest/controller/testesFelizesController.test.js\" --timeout 10000 --reporter mochawesome",
+
+    "test-graphql-controller": "mocha \"test/graphql/controller/**/*.js\" --timeout 10000 --reporter mochawesome",
+    "test-graphql-controller-testesFelizes": "mocha \"test/graphql/controller/testesFelizesController.test.js\" --timeout 10000 --reporter mochawesome",
+
+
     "start-rest": "node server.js",
     "start-graphql": "node graphql/server.js"
+
+
+
   }
 }
