--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Rodar os testes externos da API Rest via HTTP
         run: npm run test-rest-external
 
-    #  - name: Rodar os testes externos da API GraphQL via HTTP
-    #    run: npm run test-graphql-external
+      - name: Rodar os testes externos da API GraphQL via HTTP
+        run: npm run test-graphql-external
